floating UI z-index fix

--- a/styles/floating-ui.css
+++ b/styles/floating-ui.css
@@ -1,6 +1,6 @@
 .dsp-floating-ui {
   position: fixed;
-  z-index: 100;
+  /* z-index: 100; */
   pointer-events: auto;
   --dsp-fui-transition: 0.25s ease;
   --dsp-fui-transition-fast: 0.15s ease;
